# ResumeMatchLab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
analysis/r/: _quarto.yml  compare.html  compare.qmd  demo_deltas.csv  validate.R
apps/: __init__.py
apps/api/: Dockerfile  __init__.py  main.py  serialize.py
apps/frontend/: app.py
apps/frontend/components/: __init__.py  analytics.py  charts.py  report.py
core/: __init__.py  clusters.py  data.py  scoring.py  types.py
data/jobs_snapshot/: cluster_labels.parquet  jobs.parquet
docs/: analytics.md  architecture.md  decisions.md  python-vs-r.md
docs/business/: competitive_analysis.md  market_sizing.md  personas.md  swot.md  user_stories.md
docs/experiments/: layout-v2.md
docs/methodology/: case_study.md
parsers/: __init__.py  docx.py  pdf.py  plaintext.py  resume.py
scripts/: _screenshot.py  deploy_hf_space.sh  export_demo_deltas.py  export_from_jobatlas.py  render_case_study.py  smoke_demo.py
stats/: __init__.py  bayesian.py  cuped.py  engine.py  frequentist.py  multiple_comparisons.py  power.py  sequential.py
tests/: conftest.py  test_api.py  test_engine.py  test_frequentist.py  test_parsers.py  test_report.py  test_stats_advanced.py
tests/fixtures/synthetic_resumes/: data_scientist.txt  devops_engineer.txt
