[project]
name = "resumematch-lab"
version = "0.1.0"
description = "A/B testing your resume against the live Indian tech job market"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]  # long lines are fine in docstrings/equations

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
